#[736456]: Changed overflow css property to auto. #[955188]: Added documentation for Secure Pages checkout pane integration. #[958680]: Fixed conditional actions issue with required TOS.

--- a/uc_termsofservice.css
+++ b/uc_termsofservice.css
@@ -1,6 +1,6 @@
 #uc_termsofservice_agreement_checkout-pane .tos-text {
   border: 1px solid #D2E6F3;
-  overflow: scroll;
+  overflow: auto;
   height: 200px;
   padding: 5px;
   margin: 0 0 10px 0;
